// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box should be rendered with acrylic effects 1`] = `
<div
  class="sc-bwzfXH bZGahn"
>
  <span>
    Hello World
  </span>
</div>
`;

exports[`Box should render children 1`] = `
<div
  class="sc-bdVaJa esDbxU"
>
  <span>
    Hello World
  </span>
</div>
`;
